# waseda-hrs

.github/: pull_request_template.md
.github/actions/python-lint/: action.yaml
.github/actions/python-test/: action.yaml
.github/workflows/: backend.python-lint-and-test.yaml
apps/backend/: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
apps/backend/sqlc/: go.mod  sqlc.yaml
apps/backend/sqlc/query/backend/: health.sql
backend/: README.md  main.py  openapi.json  pyproject.toml
backend/routers/: cancellation.py  checkin.py  checkout.py  inquiry.py  reservation.py
backend/schemas/: common.py
backend/schemas/request/: reservation.py  room.py
backend/schemas/response/: cancellation.py  checkin.py  checkout.py  error.py  reservation.py  room.py
backend/scripts/: generate_openapi.py
docs/: draft.md  slides.html  task.md
docs/diagrams/: index.html
docs/uml/: 01_domain_class_diagram.puml  02_domain_object_diagram.puml  03_usecase_diagram.puml  04_usecase_description.md  05_activity_diagram_reserve.puml  06_activity_diagram_checkin.puml  07_activity_diagram_checkout.puml  08_bce_objects.md  08_collaboration_diagram.puml  08a_collaboration_uc1_reserve.puml  08b_collaboration_uc2_checkin.puml  08c_collaboration_uc3_checkout.puml  08d_collaboration_uc4_inquiry.puml  08e_collaboration_uc5_cancel.puml  09_system_class_diagram.puml  generate_images.sh
